--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,37 @@
 {
     "name": "veneridze/laravel-permission",
+    "version": "1.0.0",
     "require": {
+        "php": ">=8.2",
         "spatie/laravel-model-info": "^2.0",
-        "laravel/framework": "^11.25",
+        "laravel/framework": "^11.0",
         "spatie/laravel-data": "^4.10",
         "spatie/laravel-package-tools": "^1.16"
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Veneridze\\LaravelPermission\\PermissionProvider"
+            ]
+        }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "license": "MIT",
     "autoload": {
         "psr-4": {
             "Veneridze\\LaravelPermission\\": "src/"
         }
     },
+    "scripts": {
+        "analyse": "vendor/bin/phpstan analyse",
+        "baseline": "vendor/bin/phpstan analyse --generate-baseline",
+        "test": "vendor/bin/pest"
+    },
     "authors": [
         {
             "name": "Veneridze",
             "email": "viacheslav.kopaev@yandex.ru"
         }
-    ],
-    "minimum-stability": "stable"
+    ]
 }
